<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PlayerActivity"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/backBtnPA"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/back_icon"
                android:background="?attr/selectableItemBackground"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/back_btn"
                app:tint="?colorOnPrimary"
                android:padding="10dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="?colorOnPrimary"
                android:text="@string/world_of_music"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_weight="1"
                tools:ignore="NestedWeights"
                android:textStyle="bold" />

        </LinearLayout>

        <!--    Current Song Image-->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/songImgPA"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:src="@drawable/ic_music"
            app:shapeAppearanceOverlay="@style/curved"
            app:strokeColor="@color/purple_500"
            app:strokeWidth="5dp"
            android:background="@color/purple_500"/>

        <!--    Current Song Name-->
        <TextView
            android:id="@+id/songNamePA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/song_name"
            android:textSize="18sp"
            android:textColor="@color/txt_color"
            android:gravity="center"
            android:layout_weight="1"
            android:textIsSelectable="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/previousBtnPA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/previous_icon"
                app:iconSize="40dp"
                android:visibility="gone"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/playPauseBtnPA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/pause_icon"
                app:iconSize="50dp"
                android:layout_marginHorizontal="25dp"
                app:shapeAppearanceOverlay="@style/curved"
                android:backgroundTint="@color/purple_500"
                app:iconTint="@color/white" />

            <!--        Next Button-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/nextBtnPA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/next_icon"
                app:iconSize="40dp"
                tools:ignore="SpeakableTextPresentCheck"
                android:visibility="gone"/>

        </LinearLayout>

        <!--    Seekbar & TextViews for it-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvSeekBarStart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="?colorOnPrimary"
                android:textSize="15sp"
                android:text="@string/start_tv"
                android:gravity="center" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seekBarPA"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tvSeekBarEnd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="?colorOnPrimary"
                android:textSize="15sp"
                android:text="@string/end_tv"
                android:gravity="center"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
</layout>